fixed overflow navbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,9 @@ body,
   height: 100%;
   width: 100%;
   font-family: "Inter", sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
+  padding: 0 !important;
 }
 
 ::-webkit-scrollbar {
